# security-scanner

./: .gitignore  .gitscannerignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  git-security-scanner.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: dev.to-article.md  getting-started.md
scripts/: publish.sh
src/security_scanner/: __init__.py  cache.py  cli.py  config.py  export.py  patterns.py  py.typed  scanner.py  utils.py
tests/: test_cache.py  test_cli.py  test_config.py  test_export.py  test_patterns.py  test_scanner.py
