[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "git-security-scanner"
version = "0.1.0"
description = "A simple Python tool to detect API keys, passwords, and secrets in your Git repositories"
readme = "README.md"
authors = [
    {name = "Vyacheslav Meyerzon", email = "vyacheslav.meyerzon@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["security", "git", "secrets", "scanner", "api-keys", "passwords"]
requires-python = ">=3.7"
dependencies = [
    "colorama>=0.4.6",
]

[project.urls]
Homepage = "https://github.com/vyacheslavmeyerzon/security-scanner"
Repository = "https://github.com/vyacheslavmeyerzon/security-scanner"
Issues = "https://github.com/vyacheslavmeyerzon/security-scanner/issues"

[project.scripts]
git-security-scanner = "security_scanner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
security_scanner = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["src/security_scanner"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false