[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "git-security-scanner"
version = "0.1.4"
description = "A comprehensive tool to detect secrets and sensitive information in Git repositories"
readme = "README.md"
authors = [
    {name = "Vyacheslav Meyerzon", email = "vyacheslav.meyerzon@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
    "Topic :: Software Development :: Version Control :: Git",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
keywords = [
    "security", "git", "secrets", "scanner", "api-keys", "passwords",
    "security-tools", "devsecops", "secret-detection", "code-security"
]
requires-python = ">=3.8"
dependencies = [
    "colorama>=0.4.6",
    "PyYAML>=6.0",
    "tqdm>=4.65.0",
]

[project.urls]
Homepage = "https://github.com/vyacheslavmeyerzon/security-scanner"
Repository = "https://github.com/vyacheslavmeyerzon/security-scanner"
Issues = "https://github.com/vyacheslavmeyerzon/security-scanner/issues"
Documentation = "https://github.com/vyacheslavmeyerzon/security-scanner/wiki"

[project.scripts]
git-security-scanner = "security_scanner.cli:run_cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "types-colorama>=0.4.15",
    "types-PyYAML>=6.0",
    "build>=0.10.0",
    "twine>=4.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
security_scanner = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = false
strict_optional = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["src/security_scanner"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false